# pyvdk

./: .flake8  .gitignore  LICENSE  README.md  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
docs/: api_methods_call.md  api_reference.md  handlers.md  index.md  intro.md  rules.md  tools.md
docs/additional/: changelog.md
docs/assets/css/: autodoc.css  code.css
examples/: quickstart.py
pyvdk/: __init__.py  bot.py  config.py  custom_logging.py  logging.py  request_handler.py  utils.py
pyvdk/api/: __init__.py  abc.py  api.py  category.py
pyvdk/api/categories/: __init__.py  ads.py  app_widgets.py  apps.py  board.py  downloaded_games.py  gifts.py  groups.py  likes.py  market.py  messages.py  newsfeed.py  orders.py  secure.py  storage.py  stories.py  streaming.py  widgets.py
pyvdk/config/: abc.py  config.py
pyvdk/event/: __init__.py  abc.py  handler.py  labeler.py  view.py
pyvdk/request/: __init__.py  checker.py  handler.py
pyvdk/rule/: __init__.py  abc.py  rule.py
pyvdk/rules/: __init__.py  abc.py  bunch.py  rules.py
pyvdk/tools/: __init__.py  funcs.py  logger.py  mention.py
pyvdk/tools/keyboard/: __init__.py  abc.py  buttons.py  keyboard.py
pyvdk/tools/uploaders/: __init__.py  abc.py  photo.py
pyvdk/types/: __init__.py  abc.py  custom.py  objects.py
pyvdk/types/events/: __init__.py  bot_events.py  events.py  events_base.py  (+2 more)
pyvdk/uploaders/: __init__.py  abc.py  photo.py
pyvdk/vk_api/: __init__.py  abc.py  api.py  category.py
sketches/: simple_bot.py
tests/: __init__.py  config_test.py  config_test.yaml  config_tests.py  keyboard_tests.py  mention_tests.py  rules_bunch_tests.py  rules_test.py  rules_tests.py
(+88 files in other folders)
