[tool.poetry]
name = "pyvdk"
version = "0.1.0"
description = "vk toolkit"
authors = ["mikk357 <mikk357@yandex.ru>", "lightmanLP <liteman1000@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
