[tool.poetry]
name = "pyvdk"
version = "0.0.1"
description = "vk toolkit"
authors = ["lightmanLP <liteman1000@gmail.com>", "mikk357 <mikk357@yandex.ru>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pyyaml = "^5.3.1"
jinja2 = "^2.11.2"
vbml = "^1.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
